--- a/frontend/src/app/core/components/admin/main/main.component.html
+++ b/frontend/src/app/core/components/admin/main/main.component.html
@@ -63,7 +63,7 @@
         routerLinkActive="active-link"
       >
         <span mat-symbol="bar_chart" matListItemIcon></span>
-        <span matListItemTitle>Reports</span>
+        <span matListItemTitle>Official Reports</span>
       </a>
       <!--Help-->
       <a
