--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -124,6 +124,14 @@ body {
 
 /* Custom Styling applied globally */
 
+.pop {
+  transition: all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+
+  &:active {
+    transform: scale(0.96);
+  }
+}
+
 .sec-ripple .mat-ripple-element {
   background-color: var(--secondary-fade) !important;
 }
