--- a/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
@@ -78,7 +78,10 @@
 
         <!-- Faculty Units Column -->
         <ng-container matColumnDef="facultyUnits">
-          <th mat-header-cell *matHeaderCellDef class="custom-header">Units</th>
+          <th mat-header-cell *matHeaderCellDef class="custom-header">
+            Load<br />
+            (Units)
+          </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
             {{ element.facultyUnits }}
           </td>
