--- a/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
@@ -25,7 +25,7 @@
               {{
                 i +
                   1 +
-                  (paginator?.pageIndex || 0) * (paginator?.pageSize || 10)
+                  (paginator.pageIndex || 0) * (paginator.pageSize || 10)
               }}
             </span>
           </td>
