--- a/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
@@ -1,4 +1,10 @@
 <div class="report-container">
+  <!--Display while loading-->
+  @if (isLoading) {
+  <div class="loading-wrapper">
+    <app-loading></app-loading>
+  </div>
+  } @else {
   <!-- Faculty Report Header-->
   <div class="report-header-container" [@fadeAnimation]>
     <app-table-header
@@ -22,11 +28,7 @@
           </th>
           <td mat-cell *matCellDef="let element; let i = index" class="index">
             <span>
-              {{
-                i +
-                  1 +
-                  (paginator.pageIndex || 0) * (paginator.pageSize || 10)
-              }}
+              {{ getRowIndex(i) }}
             </span>
           </td>
         </ng-container>
@@ -158,4 +160,5 @@
       </mat-paginator>
     </div>
   </div>
+  }
 </div>
