--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -112,7 +112,7 @@
   --blue-fade: #00277040;
   --blue-fade-lighter: #1d35634d;
 
-  --purple-primary: #b494ea;
+  --purple-primary: #c4abf0;
   --purple-fade: #1a004640;
   --purple-fade-lighter: #5537864d;
 
