add specific view title

--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -100,7 +100,7 @@
               (click)="onView(element)"
             >
               <mat-icon>visibility</mat-icon>
-              <span>View</span>
+              <span>View Preferences</span>
             </button>
             <button
               mat-button
