--- a/frontend/src/app/core/components/admin/reports/report-rooms/report-rooms.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-rooms/report-rooms.component.html
@@ -73,7 +73,7 @@
               (click)="onView(element)"
             >
               <mat-icon>visibility</mat-icon>
-              <span>View</span>
+              <span>View Schedule</span>
             </button>
             <button
               mat-button
