--- a/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
@@ -101,7 +101,7 @@
               (click)="onView(element)"
             >
               <mat-icon>visibility</mat-icon>
-              <span>View</span>
+              <span>View Schedule</span>
             </button>
             <button
               mat-button
