--- a/frontend/src/app/core/components/admin/reports/report-programs/report-programs.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-programs/report-programs.component.html
@@ -89,7 +89,7 @@
               (click)="onView(element)"
             >
               <mat-icon>visibility</mat-icon>
-              <span>View</span>
+              <span>View Schedule</span>
             </button>
             <button
               mat-button
