add schedule timeline in dialog-view-schedule component

--- a/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.html
+++ b/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.html
@@ -22,7 +22,7 @@
 
   <!-- Schedule Calendar Container -->
   <div class="dialog-schedule-calendar-container" [@fadeAnimation]>
-    <!--The weekly schedule will be displayed here-->
+    <app-schedule-timeline [scheduleData]="data.entityData"></app-schedule-timeline>
   </div>
 
   <!-- Action buttons -->
