--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -42,6 +42,7 @@
   --line-height-lg: 1.75;
 
   // Spacing
+  --spacing-xxxs: 0.1rem;
   --spacing-xxs: 0.25rem;
   --spacing-xs: 0.5rem;
   --spacing-sm: 0.75rem;
