pass the schedule data to the dialog

--- a/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.html
+++ b/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.html
@@ -22,7 +22,9 @@
 
   <!-- Schedule Calendar Container -->
   <div class="dialog-schedule-calendar-container" [@fadeAnimation]>
-    <app-schedule-timeline [scheduleData]="data.entityData"></app-schedule-timeline>
+    <app-schedule-timeline
+      [scheduleData]="scheduleData"
+    ></app-schedule-timeline>
   </div>
 
   <!-- Action buttons -->
