--- a/frontend/src/app/core/components/admin/reports/report-rooms/report-rooms.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-rooms/report-rooms.component.html
@@ -61,6 +61,16 @@
           </td>
         </ng-container>
 
+        <!-- Capacity Column -->
+        <ng-container matColumnDef="capacity">
+          <th mat-header-cell *matHeaderCellDef class="custom-header">
+            Capacity
+          </th>
+          <td mat-cell *matCellDef="let element" class="custom-cell">
+            {{ element.capacity }}
+          </td>
+        </ng-container>
+
         <!-- Action Column -->
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef class="custom-header">
