make schedule content dynamic based on report type

--- a/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.html
+++ b/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.html
@@ -24,6 +24,7 @@
   <div class="dialog-schedule-calendar-container" [@fadeAnimation]>
     <app-schedule-timeline
       [scheduleData]="scheduleData"
+      [entity]="data.entity"
     ></app-schedule-timeline>
   </div>
 
