--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -83,7 +83,11 @@
         <div class="courses-scroll-container">
           <div [@cardEntranceAnimation]="filteredSearchResults.length">
             @for (course of filteredSearchResults; track course.course_id) {
-            <div class="course-card" matRipple>
+            <div
+              class="course-card pop"
+              matRipple
+              (click)="addCourseToTable(course)"
+            >
               <div class="course-info">
                 <span class="course-code">{{ course.course_code }}</span>
                 <span class="course-title">{{ course.course_title }}</span>
@@ -109,7 +113,7 @@
           <div [@cardEntranceAnimation]="programs.length">
             @for (program of programs; track trackByProgramId($index, program)){
             <div
-              class="program-card"
+              class="program-card pop"
               (click)="selectProgram(program)"
               matRipple
             >
@@ -136,7 +140,11 @@
           <div [@cardEntranceAnimation]="filteredCourses.length">
             @for (course of filteredCourses; track trackByCourseId($index,
             course)) {
-            <div class="course-card" matRipple>
+            <div
+              class="course-card pop"
+              matRipple
+              (click)="addCourseToTable(course)"
+            >
               <div class="course-info">
                 <span class="course-code">{{ course.course_code }}</span>
                 <span class="course-title">{{ course.course_title }}</span>
@@ -202,7 +210,7 @@
           <th mat-header-cell *matHeaderCellDef class="table-header">
             Course Title
           </th>
-          <td mat-cell *matCellDef="let element" class="table-cell">
+          <td mat-cell *matCellDef="let element" class="table-cell title-cell">
             {{ element.course_title }}
           </td>
         </ng-container>
@@ -272,11 +280,15 @@
           </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: displayedColumns"
+          [@rowAdditionAnimation]
+        ></tr>
 
         <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell" colspan="9">
-            <div class="no-data-text">
+            <div class="no-data-text" [@fadeAnimation]>
               <span mat-symbol="info"></span>
               <span>No preferences added yet.</span>
             </div>
