--- a/frontend/src/app/core/components/admin/reports/report-programs/report-programs.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-programs/report-programs.component.html
@@ -1,4 +1,10 @@
 <div class="report-container">
+  <!--Display while loading-->
+  @if (isLoading) {
+  <div class="loading-wrapper">
+    <app-loading></app-loading>
+  </div>
+  } @else {
   <!-- Programs Report Header-->
   <div class="report-header-container" [@fadeAnimation]>
     <app-table-header
@@ -21,13 +27,7 @@
             #
           </th>
           <td mat-cell *matCellDef="let element; let i = index" class="index">
-            <span>
-              {{
-                i +
-                  1 +
-                  (paginator?.pageIndex || 0) * (paginator?.pageSize || 10)
-              }}
-            </span>
+            <span>{{ getRowIndex(i) }}</span>
           </td>
         </ng-container>
 
@@ -37,7 +37,7 @@
             Program Code
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            {{ element.programCode }}
+            {{ element.program_code }}
           </td>
         </ng-container>
 
@@ -47,19 +47,27 @@
             Program Name
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            {{ element.programName }}
+            {{ element.program_title }}
           </td>
         </ng-container>
 
         <!-- Year Level Column -->
         <ng-container matColumnDef="yearLevel">
           <th mat-header-cell *matHeaderCellDef class="custom-header">
-            Year Level
+            Year Levels
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <button mat-button class="prim-button" (click)="onOpenDialog(element, 'yearLevel')">
+            <button
+              mat-button
+              class="prim-button"
+              (click)="onOpenDialog(element, 'yearLevel')"
+            >
               <mat-icon>school</mat-icon>
-              {{ element.yearLevel || "All Year Levels" }}
+              {{
+                element.year_levels_selected === "All"
+                  ? "All Year Levels"
+                  : "Year Level " + element.year_levels_selected
+              }}
             </button>
           </td>
         </ng-container>
@@ -67,12 +75,20 @@
         <!-- Section Column -->
         <ng-container matColumnDef="section">
           <th mat-header-cell *matHeaderCellDef class="custom-header">
-            Section
+            Sections
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <button mat-button class="prim-button" (click)="onOpenDialog(element, 'section')">
+            <button
+              mat-button
+              class="prim-button"
+              (click)="onOpenDialog(element, 'section')"
+            >
               <mat-icon>view_list</mat-icon>
-              {{ 'Section ' + element.section || "All Sections" }}
+              {{
+                element.section_selected === "All"
+                  ? "All Sections"
+                  : "Section " + element.section_selected
+              }}
             </button>
           </td>
         </ng-container>
@@ -129,4 +145,5 @@
       </mat-paginator>
     </div>
   </div>
+  }
 </div>
