--- a/frontend/src/app/shared/schedule-timeline/schedule-timeline.component.html
+++ b/frontend/src/app/shared/schedule-timeline/schedule-timeline.component.html
@@ -15,16 +15,46 @@
         @for (day of days; track day) {
         <td
           class="schedule-cell"
-          [ngClass]="{'schedule-block-start': isScheduleBlockStart(day, i)}"
+          [ngClass]="{ 'schedule-block-start': isScheduleBlockStart(day, i) }"
           [ngStyle]="getScheduleBlockStyle(day, i)"
         >
           @if (isScheduleBlockStart(day, i)) {
-            <div 
-              class="schedule-content"
-              [style.height.px]="getScheduleBlockHeight(day, i)"
-              [innerHTML]="getScheduleBlockContent(day,i)"
-            >
+          <div
+            class="schedule-content"
+            [style.height.px]="getScheduleBlockHeight(day, i)"
+            [ngClass]="getDayClass(day)"
+          >
+            <!-- Course Code and Course Title (Visible for all entities) -->
+            <div class="course">
+              <span class="course-text">
+                {{ getBlockProperty(day, i, "courseCode") }}<br />
+                {{ getBlockProperty(day, i, "courseTitle") }}
+              </span>
             </div>
+            <!-- Program Details (Visible for faculty and room) -->
+            @if (entity === 'faculty' || entity === 'room') {
+            <div>
+              ({{ getBlockProperty(day, i, "program") }}
+              {{ getBlockProperty(day, i, "yearLevel") }}-{{
+                getBlockProperty(day, i, "section")
+              }})
+            </div>
+            }
+            <!-- Faculty Name (Visible for program and room) -->
+            @if (entity === 'program' || entity === 'room') {
+            <div>
+              {{ getBlockProperty(day, i, "facultyName") }}
+            </div>
+            }
+            <!-- Room Code (Visible for faculty and program) -->
+            @if (entity === 'faculty' || entity === 'program') {
+            <div>
+              {{ getBlockProperty(day, i, "roomCode") }}
+            </div>
+            }
+            <!-- Time (Visible for all entities) -->
+            <div>{{ getFormattedTime(day, i) }}</div>
+          </div>
           }
         </td>
         }
