--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
@@ -261,7 +261,7 @@
     background-color: var(--neutral-light);
 
     &.title-cell {
-      max-width: var(--spacing-4xl);
+      max-width: 12rem;
     }
 
     .display-time {
