disable action button in the absence of changes

--- a/frontend/src/app/shared/table-dialog/table-dialog.component.html
+++ b/frontend/src/app/shared/table-dialog/table-dialog.component.html
@@ -234,7 +234,7 @@
       mat-flat-button
       class="action-button"
       color="primary"
-      [disabled]="form.invalid || isLoading"
+      [disabled]="form.invalid || !hasFormChanged() || isLoading"
       (click)="onSave()"
     >
       @if (isLoading) {
