remove 'prof' prefix

--- a/frontend/src/app/shared/dialog-pref/dialog-pref.component.html
+++ b/frontend/src/app/shared/dialog-pref/dialog-pref.component.html
@@ -8,7 +8,7 @@
   <!-- Faculty Info-->
   <div class="faculty-info" [@fadeAnimation]>
     <!--Faculty Name-->
-    <h2 class="faculty-name">Prof. {{ facultyName }}</h2>
+    <h2 class="faculty-name">{{ facultyName }}</h2>
     <span>
       Submitted Preferences for A.Y. {{ academicYear }},
       {{ semesterLabel }}</span
