add schedule summary for faculty

--- a/frontend/src/app/core/components/faculty/home/home.component.html
+++ b/frontend/src/app/core/components/faculty/home/home.component.html
@@ -5,8 +5,7 @@
     <div id="home_greetings">
       <h1>Hello, {{ facultyName }}</h1>
       <p>
-        Here's your class schedule for this month and other key information for
-        the semester.
+        Here's your class schedule for this month and other key information.
       </p>
     </div>
 
