--- a/frontend/src/app/core/components/faculty/home/home.component.scss
+++ b/frontend/src/app/core/components/faculty/home/home.component.scss
@@ -43,7 +43,7 @@
     p {
       @include reset-styles;
       width: max-content;
-      font-size: var(--font-size-lg);
+      font-size: var(--font-size-mdx);
     }
   }
 
