--- a/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.scss
+++ b/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.scss
@@ -17,33 +17,70 @@
 
 .row-one {
   @include flex-layout(
-    $direction: column,
-    $align: flex-start,
-    $justify: flex-start,
+    $align: stretch,
+    $justify: space-between,
     $gap: var(--spacing-md)
   );
 
   .page-header {
-    display: flex;
-    flex-direction: column;
-    gap: var(--spacing-xxs);
-
+    @include flex-layout(
+      $direction: column,
+      $align: flex-start,
+      $gap: var(--spacing-xxs)
+    );
+  
     h1 {
       @include reset-styles;
-      width: max-content;
       font-size: var(--font-size-2xxl);
       font-weight: 700;
-
+  
       @include gradient-primary(315deg);
       background-clip: text;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-
+  
     p {
       @include reset-styles;
-      width: max-content;
       font-size: var(--font-size-mdx);
+    }
+  }
+  
+
+  .schedule-overview {
+    @include flex-layout($align: stretch, $gap: var(--spacing-md));
+    width: 25rem;
+
+    .schedule-summary,
+    .schedule-history {
+      color: white;
+      padding: var(--spacing-xs) var(--spacing-sm);
+      border-radius: var(--border-radius-sm);
+
+      .mini-heading {
+        @include flex-layout($justify: flex-start, $gap: var(--spacing-xxs));
+        font-weight: 600;
+        max-width: max-content;
+
+        span[mat-symbol] {
+          font-size: medium;
+        }
+      }
+    }
+
+    .schedule-summary {
+      flex: 1;
+      @include gradient-primary(315deg);
+    }
+
+    .schedule-history {
+      flex: 1;
+      @include gradient-secondary(315deg);
+      cursor: pointer;
+
+      p {
+        opacity: var(--opacity-semi-opaque);
+      }
     }
   }
 }
@@ -75,5 +112,21 @@
         font-size: var(--font-size-mdx);
       }
     }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .row-one {
+    @include flex-layout(
+      $direction: column,
+      $align: stretch,
+      $gap: var(--spacing-md)
+    );
+
+    .schedule-overview {
+
+      width: auto;
+    }
+
   }
 }
