enhance faculty schedule timetable and schedule timeline

--- a/frontend/src/app/shared/faculty-schedule-timetable/faculty-schedule-timetable.component.html
+++ b/frontend/src/app/shared/faculty-schedule-timetable/faculty-schedule-timetable.component.html
@@ -39,7 +39,7 @@
             <div>
               {{ getBlockProperty(day, i, "roomCode") }}
             </div>
-            <div>{{ getFormattedTime(day, i) }}</div>
+            <div class="time">{{ getFormattedTime(day, i) }}</div>
           </div>
           }
         </td>
