--- a/frontend/src/app/shared/schedule-timeline/schedule-timeline.component.html
+++ b/frontend/src/app/shared/schedule-timeline/schedule-timeline.component.html
@@ -53,7 +53,7 @@
             </div>
             }
             <!-- Time (Visible for all entities) -->
-            <div>{{ getFormattedTime(day, i) }}</div>
+            <div class="time">{{ getFormattedTime(day, i) }}</div>
           </div>
           }
         </td>
