--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -30,28 +30,34 @@
   --primary-warning: #bb1f1f;
 
   --primary-one-fade: #98292947;
+  --primary-text-two: #f5cbcb;
 
   --error-base: #800000;
 
   --secondary-text: #957619;
   --secondary-hover: #a47f1a0b;
   --secondary-fade: #80631520;
+  --secondary-text-two: #f0e2b6;
 
   /* Extra colors */
   --blue-primary: #002f85;
   --blue-fade: #0027702f;
   --blue-fade-lighter: #011b4b1a;
+  --blue-text: #b8ccf3;
 
   --purple-primary: #310085;
   --purple-fade: #27006a31;
   --purple-fade-lighter: #21035431;
+  --purple-text: #e3d4fd;
 
   --aqua-primary: #004240;
   --aqua-fade: #02575340;
   --aqua-fade-lighter: #004c4831;
+  --aqua-text: #a1d8d6;
 
   --green-primary: #005a09;
   --green-fade: #00461933;
+  --green-text: #c8f1cc;
 
   /* Gradient-speficic values */
 
@@ -100,28 +106,34 @@
   --primary-warning: #ffb4ab;
 
   --primary-one-fade: #ff3c3c38;
+  --primary-text-two: #3f0000;
 
   --error-base: #b43a3a;
 
   --secondary-text: #cc9d1b;
   --secondary-hover: #cc9d1b08;
   --secondary-fade: #87691620;
+  --secondary-text-two: #423200;
 
   /* Extra colors */
   --blue-primary: #a5c1f5;
   --blue-fade: #00277040;
   --blue-fade-lighter: #1d35634d;
+  --blue-text: #021f57;
 
   --purple-primary: #c4abf0;
   --purple-fade: #1a004640;
   --purple-fade-lighter: #5537864d;
+  --purple-text: #250064;
 
   --aqua-primary: #97d3d1;
   --aqua-fade: #02575340;
   --aqua-fade-lighter: #2552504d;
+  --aqua-text: #003230;
 
   --green-primary: #97d39d;
   --green-fade: #00461940;
+  --green-text: #003d06;
 
   /* Gradient-speficic values */
 
