--- a/frontend/src/app/shared/dialog-pref/dialog-pref.component.scss
+++ b/frontend/src/app/shared/dialog-pref/dialog-pref.component.scss
@@ -90,8 +90,26 @@
   }
 }
 
+.dialog-pref-pdf-container {
+  @include flex-layout(
+    $direction: column,
+    $align: stretch,
+    $justify: flex-start
+  );
+
+  .pdf-container {
+    .pdf-iframe {
+      width: 100%;
+      height: 30vw;
+      border: none;
+      border-radius: var(--border-radius-md);
+      box-shadow: var(--shadow-level-1);
+    }
+  }
+}
+
 .dialog-actions {
-  @include flex-layout($justify: flex-end);
+  @include flex-layout($justify: flex-end, $gap: var(--spacing-sm));
   padding-top: var(--spacing-xs);
 
   button {
