--- a/frontend/src/app/shared/dialog-pref/dialog-pref.component.scss
+++ b/frontend/src/app/shared/dialog-pref/dialog-pref.component.scss
@@ -19,10 +19,6 @@
     font-weight: 600;
     @include reset-styles;
   }
-
-  .view-option {
-    @include flex-layout($align: flex-end);
-  }
 }
 
 .dialog-pref-table-container {
@@ -31,7 +27,7 @@
   overflow: scroll;
   position: relative;
   border-radius: var(--border-radius-md);
-  max-height: 30vw;
+  max-height: var(--dialog-base-height);
   box-shadow: var(--shadow-level-1);
 
   .table-container {
@@ -96,16 +92,7 @@
     $align: stretch,
     $justify: flex-start
   );
-
-  .pdf-container {
-    .pdf-iframe {
-      width: 100%;
-      height: 30vw;
-      border: none;
-      border-radius: var(--border-radius-md);
-      box-shadow: var(--shadow-level-1);
-    }
-  }
+  max-height: var(--dialog-base-height);
 }
 
 .dialog-actions {
