--- a/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.scss
+++ b/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.scss
@@ -29,19 +29,6 @@
       color: var(--primary-text);
     }
   }
-
-  .view-option {
-    @include flex-layout($align: flex-end);
-
-    .button-toggle {
-      @include flex-layout;
-
-      mat-icon {
-        font-size: large;
-        display: vertical-center;
-      }
-    }
-  }
 }
 
 .multiple-schedules-container {
@@ -51,7 +38,7 @@
     $justify: flex-start,
     $gap: var(--spacing-xl)
   );
-  max-height: 70vh;
+  max-height: var(--dialog-base-height);
   overflow: auto;
   padding-right: var(--spacing-md);
 
@@ -78,12 +65,12 @@
     $justify: flex-start
   );
 
-  min-height: 60vh;
+  min-height: var(--dialog-base-height);
 }
 
 iframe {
   width: 100%;
-  height: 30vw;
+  max-height: var(--dialog-base-height);
   border: none;
   border-radius: var(--border-radius-md);
   box-shadow: var(--shadow-level-1);
