add units description

--- a/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.html
+++ b/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.html
@@ -17,8 +17,8 @@
      <!--Schedule Summary-->
      <div class="schedule-summary">
       <h4 class="mini-heading"><span mat-symbol="article"></span>Schedule Summary</h4>
-      <p>Total Units: {{ facultySchedule.assigned_units }}</p>
-      <p>Total Hours: {{ facultySchedule.total_hours }}</p>
+      <p>Total Units: {{ facultySchedule.assigned_units }} units</p>
+      <p>Total Hours: {{ facultySchedule.total_hours }} hours</p>
      </div>
 
      <!--Schedule Summary-->
