--- a/frontend/src/app/shared/table-generic/table-generic.component.scss
+++ b/frontend/src/app/shared/table-generic/table-generic.component.scss
@@ -34,6 +34,24 @@
     padding: var(--spacing-md);
     color: var(--neutral-base); 
     border-radius: 0 0 var(--border-radius-md) var(--border-radius-md);
+    border: 1px solid red;
+    
+  .no-data-text {
+    @include flex-layout($gap: var(--spacing-xs));
+    width: 100%;
+    text-align: center;
+    background-color: var(--neutral-light);
+    font-size: var(--font-size-md);
+    padding: var(--spacing-xs) 0;
+
+    span {
+      opacity: var(--opacity-semi-opaque);
+    }
+
+    span[mat-symbol] {
+      font-size: 100%;
+    }
+  }
   }
   
 
