fix units display bug

--- a/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.html
+++ b/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.html
@@ -14,18 +14,29 @@
 
     <!--Schedule Overview-->
     <div class="schedule-overview" [@fadeAnimation]>
-     <!--Schedule Summary-->
-     <div class="schedule-summary">
-      <h4 class="mini-heading"><span mat-symbol="article"></span>Schedule Summary</h4>
-      <p>Total Units: {{ facultySchedule.assigned_units }} units</p>
-      <p>Total Hours: {{ facultySchedule.total_hours }} hours</p>
-     </div>
+      <!--Schedule Summary-->
+      <div class="schedule-summary">
+        <h4 class="mini-heading">
+          <span mat-symbol="article"></span>Schedule Summary
+        </h4>
+        <p>
+          Total Units: @if (isPublished) {
+          {{ facultySchedule.assigned_units }} units } @else { 0 }
+        </p>
+        <p>
+          Total Hours: @if (isPublished) {
 
-     <!--Schedule Summary-->
-     <div class="schedule-history">
-      <h4 class="mini-heading"><span mat-symbol="history"></span>Schedule History</h4>
-      <p>View your past load and schedule here.</p>
-     </div>
+          {{ facultySchedule.total_hours }} hours } @else { 0 }
+        </p>
+      </div>
+
+      <!--Schedule Summary-->
+      <div class="schedule-history">
+        <h4 class="mini-heading">
+          <span mat-symbol="history"></span>Schedule History
+        </h4>
+        <p>View your past load and schedule here.</p>
+      </div>
     </div>
   </div>
 
