--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
@@ -68,6 +68,10 @@
     .pref-description {
       font-size: var(--font-size-mdx);
       white-space: normal;
+
+      .highlight {
+        font-weight: 600;
+      }
     }
   }
 
