--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -66,7 +66,7 @@
           <div class="input-container">
             <span mat-symbol="lock" class="input-icon"></span>
             <input
-              type="password"
+              [type]="showPassword ? 'text' : 'password'"
               placeholder="Password"
               class="login-input"
               id="password"
@@ -75,6 +75,12 @@
               minlength="8"
               maxlength="40"
             />
+            <mat-icon
+              class="password-visibility-toggle"
+              (click)="togglePasswordVisibility()"
+            >
+              {{ showPassword ? 'visibility' : 'visibility_off' }}
+            </mat-icon>
           </div>
 
           @if (password && password.invalid && (password.dirty ||
