add mat ripple on visibility icon

--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -82,6 +82,7 @@
             />
             @if (passwordHasValue) {
             <mat-icon
+              matRipple
               class="password-visibility-toggle"
               (click)="togglePasswordVisibility()"
             >
